--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="about.html" accesskey="2" title="">About</a></li>
+				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
+				<li class="current_page_item"><a href="#" accesskey="2" title="">About</a></li>
 				<li><a href="#" accesskey="3" title="">Contact</a></li>
 			</ul>
 		</div>
@@ -44,7 +44,7 @@
 		</div>
 		<div id="welcome">
 			<div class="title">
-				<h2>Header 1</h2>
+				<h2>Pagina about</h2>
 				<span class="byline">Sottotitolo</span>
 			</div>
 			<p>Descrizione</p>
